# Control-Group-Code

./: Histogram binning.ipynb  README.md
Action merging/: agent.npy  (+7 more)
students_projects/Crowdsourcing_Humanoid/Astar_Planning/: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  spec-file.txt
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/: __main__.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/agents/h1_walk/: __init__.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/agents/h1_walk/mujoco_mpc/: __init__.py  agent.py  models_ols_fno.pkl  services.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/agents/pendulum/: LQRService.py  SwingUpService.py  __init__.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/common/: Crowdsourcing.py  Environment.py  ServiceSet.py  StatePF.py  StateSpace.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/maps/h1_walk/: __init__.py  cylinders.py  living_room.py  map.py  sliding_walls.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/maps/h1_walk/obstacles/bookshelf/: bookshelf.xml  material.mtl
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/tasks/h1_walk/: __init__.py  h1_walk_costs.py  h1_walk_environment.py
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/tasks/pendulum/: __init__.py  pendulum.py  simple_pendulum.xml
students_projects/Crowdsourcing_Humanoid/Astar_Planning/data_driven_legged_locomotion/utils/: GlobalPlanner.py  __init__.py  logging.py  mujoco_spec.py  paths.py  plots.ipynb  quaternions.py  read_csv.py
(+910 files in other folders)
