[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "data_driven_legged_locomotion"
description = "Crowdsourcing algorithms for legged locomotion"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Antonio Langella"},
    {name = "Davide Risi"}
]
dependencies = []